--- a/TreeView.xib
+++ b/TreeView.xib
@@ -31,6 +31,7 @@
 			<string>NSTableView</string>
 			<string>NSTextField</string>
 			<string>NSTextFieldCell</string>
+			<string>NSTextView</string>
 		</array>
 		<array key="IBDocument.PluginDependencies">
 			<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -232,9 +233,7 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{400, 0}, {100, 20}}</string>
 										<reference key="NSSuperview" ref="1058422263"/>
-										<object class="NSShadow" key="NSViewShadow">
-											<reference key="NSShadowColor" ref="286765054"/>
-										</object>
+										<reference key="NSNextKeyView"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<string key="NSHuggingPriority">{250, 250}</string>
 										<int key="NSpiFlags">24591</int>
@@ -250,7 +249,6 @@
 						<string key="NSFrameSize">{600, 20}</string>
 						<reference key="NSSuperview" ref="714122953"/>
 						<reference key="NSNextKeyView" ref="1058422263"/>
-						<bool key="NSViewIsLayerTreeHost">YES</bool>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<string key="NSOffsets">{0, 0}</string>
 						<object class="NSTextFieldCell" key="NSTitleCell">
@@ -289,7 +287,7 @@
 												<int key="NSvFlags">274</int>
 												<string key="NSFrameSize">{598, 356}</string>
 												<reference key="NSSuperview" ref="744928146"/>
-												<reference key="NSNextKeyView" ref="364896229"/>
+												<reference key="NSNextKeyView" ref="109375115"/>
 												<bool key="NSEnabled">YES</bool>
 												<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
 												<bool key="NSControlAllowsExpansionToolTips">YES</bool>
@@ -570,7 +568,7 @@
 								</array>
 								<string key="NSFrameSize">{600, 374}</string>
 								<reference key="NSSuperview" ref="1042920217"/>
-								<reference key="NSNextKeyView" ref="744928146"/>
+								<reference key="NSNextKeyView" ref="364896229"/>
 								<int key="NSsFlags">133682</int>
 								<reference key="NSVScroller" ref="109375115"/>
 								<reference key="NSHScroller" ref="1031631872"/>
@@ -594,7 +592,7 @@
 												<int key="NSvFlags">282</int>
 												<string key="NSFrameSize">{606, 186}</string>
 												<reference key="NSSuperview" ref="495934265"/>
-												<reference key="NSNextKeyView" ref="984922387"/>
+												<reference key="NSNextKeyView" ref="337788431"/>
 												<bool key="NSEnabled">YES</bool>
 												<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
 												<bool key="NSControlAllowsExpansionToolTips">YES</bool>
@@ -888,7 +886,7 @@
 								</array>
 								<string key="NSFrame">{{0, 375}, {600, 204}}</string>
 								<reference key="NSSuperview" ref="1042920217"/>
-								<reference key="NSNextKeyView" ref="495934265"/>
+								<reference key="NSNextKeyView" ref="984922387"/>
 								<int key="NSsFlags">133810</int>
 								<reference key="NSVScroller" ref="337788431"/>
 								<reference key="NSHScroller" ref="466520787"/>
@@ -1140,9 +1138,165 @@
 				<bool key="NSNoAutoenable">YES</bool>
 				<bool key="NSMenuExcludeMarkColumn">YES</bool>
 			</object>
+			<object class="NSMenu" id="321194588">
+				<string key="NSTitle"/>
+				<array class="NSMutableArray" key="NSMenuItems">
+					<object class="NSMenuItem" id="145136807">
+						<reference key="NSMenu" ref="321194588"/>
+						<string key="NSTitle">Open Dir</string>
+						<string key="NSKeyEquiv"/>
+						<int key="NSMnemonicLoc">2147483647</int>
+						<reference key="NSOnImage" ref="962156751"/>
+						<reference key="NSMixedImage" ref="566866374"/>
+					</object>
+					<object class="NSMenuItem" id="276276919">
+						<reference key="NSMenu" ref="321194588"/>
+						<string key="NSTitle">Reveal in Finder</string>
+						<string key="NSKeyEquiv"/>
+						<int key="NSMnemonicLoc">2147483647</int>
+						<reference key="NSOnImage" ref="962156751"/>
+						<reference key="NSMixedImage" ref="566866374"/>
+					</object>
+					<object class="NSMenuItem" id="174145773">
+						<reference key="NSMenu" ref="321194588"/>
+						<string key="NSTitle">Get Info</string>
+						<string key="NSKeyEquiv"/>
+						<int key="NSMnemonicLoc">2147483647</int>
+						<reference key="NSOnImage" ref="962156751"/>
+						<reference key="NSMixedImage" ref="566866374"/>
+					</object>
+					<object class="NSMenuItem" id="757719622">
+						<reference key="NSMenu" ref="321194588"/>
+						<bool key="NSIsDisabled">YES</bool>
+						<bool key="NSIsSeparator">YES</bool>
+						<string key="NSTitle"/>
+						<string key="NSKeyEquiv"/>
+						<int key="NSMnemonicLoc">2147483647</int>
+						<reference key="NSOnImage" ref="962156751"/>
+						<reference key="NSMixedImage" ref="566866374"/>
+					</object>
+					<object class="NSMenuItem" id="445261927">
+						<reference key="NSMenu" ref="321194588"/>
+						<string key="NSTitle">Copy Path to Clipboard</string>
+						<string key="NSKeyEquiv"/>
+						<int key="NSMnemonicLoc">2147483647</int>
+						<reference key="NSOnImage" ref="962156751"/>
+						<reference key="NSMixedImage" ref="566866374"/>
+					</object>
+					<object class="NSMenuItem" id="1030286419">
+						<reference key="NSMenu" ref="321194588"/>
+						<string key="NSTitle">Copy Dir</string>
+						<string key="NSKeyEquiv"/>
+						<int key="NSMnemonicLoc">2147483647</int>
+						<reference key="NSOnImage" ref="962156751"/>
+						<reference key="NSMixedImage" ref="566866374"/>
+					</object>
+					<object class="NSMenuItem" id="152025042">
+						<reference key="NSMenu" ref="321194588"/>
+						<string key="NSTitle">Open in Terminal</string>
+						<string key="NSKeyEquiv"/>
+						<int key="NSMnemonicLoc">2147483647</int>
+						<reference key="NSOnImage" ref="962156751"/>
+						<reference key="NSMixedImage" ref="566866374"/>
+					</object>
+					<object class="NSMenuItem" id="524483599">
+						<reference key="NSMenu" ref="321194588"/>
+						<string key="NSTitle">Open in New Tab</string>
+						<string key="NSKeyEquiv"/>
+						<int key="NSMnemonicLoc">2147483647</int>
+						<reference key="NSOnImage" ref="962156751"/>
+						<reference key="NSMixedImage" ref="566866374"/>
+					</object>
+				</array>
+				<bool key="NSMenuExcludeMarkColumn">YES</bool>
+			</object>
 			<object class="NSMenu" id="355436329">
 				<string key="NSTitle">FileViewHeaderMenu</string>
 				<array class="NSMutableArray" key="NSMenuItems"/>
+			</object>
+			<object class="NSTextView" id="636039219">
+				<reference key="NSNextResponder"/>
+				<int key="NSvFlags">2322</int>
+				<string key="NSFrameSize">{394, 49}</string>
+				<reference key="NSSuperview"/>
+				<reference key="NSNextKeyView"/>
+				<string key="NSReuseIdentifierKey">_NS:13</string>
+				<object class="NSTextContainer" key="NSTextContainer" id="7447222">
+					<object class="NSLayoutManager" key="NSLayoutManager">
+						<object class="NSTextStorage" key="NSTextStorage">
+							<object class="NSMutableString" key="NSString">
+								<bytes key="NS.bytes">4oCoTm8gZmlsZXMgc2F0aXNmeSBGaWxlIFNwZWNpZmljYXRpb24</bytes>
+							</object>
+							<dictionary key="NSAttributes">
+								<object class="NSColor" key="NSBackgroundColor" id="583698136">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MSAxIDEgMAA</bytes>
+								</object>
+								<object class="NSColor" key="NSColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MSAwIDAAA</bytes>
+								</object>
+								<object class="NSFont" key="NSFont">
+									<string key="NSName">Menlo-Regular</string>
+									<double key="NSSize">18</double>
+									<int key="NSfFlags">16</int>
+								</object>
+								<object class="NSMutableParagraphStyle" key="NSParagraphStyle">
+									<int key="NSAlignment">2</int>
+									<nil key="NSTabStops"/>
+								</object>
+							</dictionary>
+							<nil key="NSDelegate"/>
+						</object>
+						<array class="NSMutableArray" key="NSTextContainers">
+							<reference ref="7447222"/>
+						</array>
+						<int key="NSLMFlags">38</int>
+						<nil key="NSDelegate"/>
+					</object>
+					<reference key="NSTextView" ref="636039219"/>
+					<double key="NSWidth">394</double>
+					<int key="NSTCFlags">1</int>
+				</object>
+				<object class="NSTextViewSharedData" key="NSSharedData">
+					<int key="NSFlags">10496</int>
+					<int key="NSTextCheckingTypes">0</int>
+					<nil key="NSMarkedAttributes"/>
+					<reference key="NSBackgroundColor" ref="583698136"/>
+					<dictionary key="NSSelectedAttributes">
+						<object class="NSColor" key="NSBackgroundColor">
+							<int key="NSColorSpace">6</int>
+							<string key="NSCatalogName">System</string>
+							<string key="NSColorName">selectedTextBackgroundColor</string>
+							<reference key="NSColor" ref="6393370"/>
+						</object>
+						<object class="NSColor" key="NSColor">
+							<int key="NSColorSpace">6</int>
+							<string key="NSCatalogName">System</string>
+							<string key="NSColorName">selectedTextColor</string>
+							<reference key="NSColor" ref="286765054"/>
+						</object>
+					</dictionary>
+					<reference key="NSInsertionColor" ref="286765054"/>
+					<dictionary key="NSLinkAttributes">
+						<object class="NSColor" key="NSColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MCAwIDEAA</bytes>
+						</object>
+						<object class="NSCursor" key="NSCursor">
+							<string key="NSHotSpot">{8, -8}</string>
+							<int key="NSCursorType">13</int>
+						</object>
+						<integer value="1" key="NSUnderline"/>
+					</dictionary>
+					<nil key="NSDefaultParagraphStyle"/>
+					<nil key="NSTextFinder"/>
+					<int key="NSPreferredTextFinderStyle">1</int>
+				</object>
+				<int key="NSTVFlags">4</int>
+				<string key="NSMaxSize">{463, 10000000}</string>
+				<string key="NSMinize">{230, 15}</string>
+				<nil key="NSDelegate"/>
 			</object>
 			<object class="NSMenu" id="280466035">
 				<string key="NSTitle">DirectoryViewHeaderMenu</string>
@@ -1374,6 +1528,70 @@
 						<reference key="destination" ref="411949447"/>
 					</object>
 					<int key="connectionID">688</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">openPath:</string>
+						<reference key="source" ref="79825435"/>
+						<reference key="destination" ref="145136807"/>
+					</object>
+					<int key="connectionID">719</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">revealPathInFinder:</string>
+						<reference key="source" ref="79825435"/>
+						<reference key="destination" ref="276276919"/>
+					</object>
+					<int key="connectionID">720</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">copyPathToClipboard:</string>
+						<reference key="source" ref="79825435"/>
+						<reference key="destination" ref="445261927"/>
+					</object>
+					<int key="connectionID">721</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">copyPath:</string>
+						<reference key="source" ref="79825435"/>
+						<reference key="destination" ref="1030286419"/>
+					</object>
+					<int key="connectionID">722</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">openPathInTerminal:</string>
+						<reference key="source" ref="79825435"/>
+						<reference key="destination" ref="152025042"/>
+					</object>
+					<int key="connectionID">723</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">openPathInNewTab:</string>
+						<reference key="source" ref="79825435"/>
+						<reference key="destination" ref="524483599"/>
+					</object>
+					<int key="connectionID">724</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">getPathInfo:</string>
+						<reference key="source" ref="79825435"/>
+						<reference key="destination" ref="174145773"/>
+					</object>
+					<int key="connectionID">727</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">noFiles</string>
+						<reference key="source" ref="79825435"/>
+						<reference key="destination" ref="636039219"/>
+					</object>
+					<int key="connectionID">733</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
@@ -1736,6 +1954,14 @@
 						</object>
 					</object>
 					<int key="connectionID">674</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">menu</string>
+						<reference key="source" ref="778608201"/>
+						<reference key="destination" ref="321194588"/>
+					</object>
+					<int key="connectionID">725</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -2272,6 +2498,68 @@
 						<reference key="object" ref="579728849"/>
 						<reference key="parent" ref="246741787"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">694</int>
+						<reference key="object" ref="321194588"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="174145773"/>
+							<reference ref="276276919"/>
+							<reference ref="524483599"/>
+							<reference ref="1030286419"/>
+							<reference ref="145136807"/>
+							<reference ref="445261927"/>
+							<reference ref="152025042"/>
+							<reference ref="757719622"/>
+						</array>
+						<reference key="parent" ref="0"/>
+						<string key="objectName">Path Control Context Menu</string>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">697</int>
+						<reference key="object" ref="174145773"/>
+						<reference key="parent" ref="321194588"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">698</int>
+						<reference key="object" ref="276276919"/>
+						<reference key="parent" ref="321194588"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">702</int>
+						<reference key="object" ref="524483599"/>
+						<reference key="parent" ref="321194588"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">703</int>
+						<reference key="object" ref="1030286419"/>
+						<reference key="parent" ref="321194588"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">704</int>
+						<reference key="object" ref="145136807"/>
+						<reference key="parent" ref="321194588"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">705</int>
+						<reference key="object" ref="445261927"/>
+						<reference key="parent" ref="321194588"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">706</int>
+						<reference key="object" ref="152025042"/>
+						<reference key="parent" ref="321194588"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">707</int>
+						<reference key="object" ref="757719622"/>
+						<reference key="parent" ref="321194588"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">732</int>
+						<reference key="object" ref="636039219"/>
+						<reference key="parent" ref="0"/>
+						<string key="objectName">Text View - No Visible Files</string>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -2361,8 +2649,18 @@
 				<integer value="1040" key="691.IBNumberFormatterBehaviorMetadataKey"/>
 				<boolean value="YES" key="691.IBNumberFormatterLocalizesFormatMetadataKey"/>
 				<string key="691.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="694.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="697.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="698.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="702.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="703.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="704.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="705.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="706.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="707.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="73.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="732.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="8.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="9.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<dictionary class="NSMutableDictionary" key="93.IBAttributePlaceholdersKey"/>
@@ -2373,7 +2671,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">691</int>
+			<int key="maxID">733</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
