--- a/TreeView.xib
+++ b/TreeView.xib
@@ -167,7 +167,7 @@
 									<object class="NSTextField" id="839515251">
 										<reference key="NSNextResponder" ref="1058422263"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{54, 1}, {35, 17}}</string>
+										<string key="NSFrame">{{54, 2}, {35, 17}}</string>
 										<reference key="NSSuperview" ref="1058422263"/>
 										<reference key="NSNextKeyView" ref="778608201"/>
 										<string key="NSReuseIdentifierKey">_NS:3944</string>
@@ -183,7 +183,7 @@
 											</object>
 											<string key="NSCellIdentifier">_NS:3944</string>
 											<reference key="NSControlView" ref="839515251"/>
-											<object class="NSColor" key="NSBackgroundColor">
+											<object class="NSColor" key="NSBackgroundColor" id="968863277">
 												<int key="NSColorSpace">6</int>
 												<string key="NSCatalogName">System</string>
 												<string key="NSColorName">controlColor</string>
@@ -233,11 +233,35 @@
 										<int key="NSvFlags">289</int>
 										<string key="NSFrame">{{400, 0}, {100, 20}}</string>
 										<reference key="NSSuperview" ref="1058422263"/>
-										<reference key="NSNextKeyView"/>
+										<reference key="NSNextKeyView" ref="482442000"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<string key="NSHuggingPriority">{250, 250}</string>
 										<int key="NSpiFlags">24591</int>
 										<double key="NSMaxValue">100</double>
+									</object>
+									<object class="NSTextField" id="482442000">
+										<reference key="NSNextResponder" ref="1058422263"/>
+										<int key="NSvFlags">-2147483607</int>
+										<string key="NSFrame">{{401, 2}, {199, 17}}</string>
+										<reference key="NSSuperview" ref="1058422263"/>
+										<reference key="NSNextKeyView"/>
+										<string key="NSReuseIdentifierKey">_NS:1535</string>
+										<bool key="NSEnabled">YES</bool>
+										<object class="NSTextFieldCell" key="NSCell" id="591986858">
+											<int key="NSCellFlags">68157504</int>
+											<int key="NSCellFlags2">4199488</int>
+											<string key="NSContents"/>
+											<reference key="NSSupport" ref="426845241"/>
+											<string key="NSCellIdentifier">_NS:1535</string>
+											<reference key="NSControlView" ref="482442000"/>
+											<bool key="NSDrawsBackground">YES</bool>
+											<reference key="NSBackgroundColor" ref="968863277"/>
+											<object class="NSColor" key="NSTextColor" id="320110204">
+												<int key="NSColorSpace">1</int>
+												<bytes key="NSRGB">MSAwIDAAA</bytes>
+											</object>
+										</object>
+										<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
 									</object>
 								</array>
 								<string key="NSFrameSize">{600, 20}</string>
@@ -327,7 +351,7 @@
 															</object>
 														</object>
 														<object class="NSTextFieldCell" key="NSDataCell" id="795012435">
-															<int key="NSCellFlags">337641536</int>
+															<int key="NSCellFlags">337641537</int>
 															<int key="NSCellFlags2">2048</int>
 															<string key="NSContents">Text Cell</string>
 															<reference key="NSSupport" ref="426845241"/>
@@ -515,7 +539,7 @@
 												<int key="NSColumnAutoresizingStyle">5</int>
 												<int key="NSDraggingSourceMaskForLocal">15</int>
 												<int key="NSDraggingSourceMaskForNonLocal">0</int>
-												<bool key="NSAllowsTypeSelect">NO</bool>
+												<bool key="NSAllowsTypeSelect">YES</bool>
 												<int key="NSTableViewDraggingDestinationStyle">0</int>
 												<int key="NSTableViewGroupRowStyle">1</int>
 												<float key="NSOutlineViewIndentationPerLevelKey">8</float>
@@ -833,7 +857,7 @@
 												<int key="NSColumnAutoresizingStyle">2</int>
 												<int key="NSDraggingSourceMaskForLocal">15</int>
 												<int key="NSDraggingSourceMaskForNonLocal">0</int>
-												<bool key="NSAllowsTypeSelect">NO</bool>
+												<bool key="NSAllowsTypeSelect">YES</bool>
 												<int key="NSTableViewDraggingDestinationStyle">0</int>
 												<int key="NSTableViewGroupRowStyle">1</int>
 											</object>
@@ -1210,6 +1234,10 @@
 				</array>
 				<bool key="NSMenuExcludeMarkColumn">YES</bool>
 			</object>
+			<object class="NSMenu" id="280466035">
+				<string key="NSTitle">DirectoryViewHeaderMenu</string>
+				<array class="NSMutableArray" key="NSMenuItems"/>
+			</object>
 			<object class="NSMenu" id="355436329">
 				<string key="NSTitle">FileViewHeaderMenu</string>
 				<array class="NSMutableArray" key="NSMenuItems"/>
@@ -1228,14 +1256,11 @@
 								<bytes key="NS.bytes">4oCoTm8gZmlsZXMgc2F0aXNmeSBGaWxlIFNwZWNpZmljYXRpb24</bytes>
 							</object>
 							<dictionary key="NSAttributes">
-								<object class="NSColor" key="NSBackgroundColor" id="583698136">
+								<object class="NSColor" key="NSBackgroundColor">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MSAxIDEgMAA</bytes>
 								</object>
-								<object class="NSColor" key="NSColor">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MSAwIDAAA</bytes>
-								</object>
+								<reference key="NSColor" ref="320110204"/>
 								<object class="NSFont" key="NSFont">
 									<string key="NSName">Menlo-Regular</string>
 									<double key="NSSize">18</double>
@@ -1259,10 +1284,13 @@
 					<int key="NSTCFlags">1</int>
 				</object>
 				<object class="NSTextViewSharedData" key="NSSharedData">
-					<int key="NSFlags">10496</int>
+					<int key="NSFlags">67119360</int>
 					<int key="NSTextCheckingTypes">0</int>
 					<nil key="NSMarkedAttributes"/>
-					<reference key="NSBackgroundColor" ref="583698136"/>
+					<object class="NSColor" key="NSBackgroundColor">
+						<int key="NSColorSpace">1</int>
+						<bytes key="NSRGB">MSAxIDEgMAA</bytes>
+					</object>
 					<dictionary key="NSSelectedAttributes">
 						<object class="NSColor" key="NSBackgroundColor">
 							<int key="NSColorSpace">6</int>
@@ -1297,10 +1325,6 @@
 				<string key="NSMaxSize">{463, 10000000}</string>
 				<string key="NSMinize">{230, 15}</string>
 				<nil key="NSDelegate"/>
-			</object>
-			<object class="NSMenu" id="280466035">
-				<string key="NSTitle">DirectoryViewHeaderMenu</string>
-				<array class="NSMutableArray" key="NSMenuItems"/>
 			</object>
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
@@ -1592,6 +1616,14 @@
 						<reference key="destination" ref="636039219"/>
 					</object>
 					<int key="connectionID">733</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">statusMessage</string>
+						<reference key="source" ref="79825435"/>
+						<reference key="destination" ref="482442000"/>
+					</object>
+					<int key="connectionID">736</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
@@ -2403,6 +2435,7 @@
 							<reference ref="778608201"/>
 							<reference ref="839515251"/>
 							<reference ref="102377338"/>
+							<reference ref="482442000"/>
 						</array>
 						<reference key="parent" ref="714122953"/>
 						<string key="objectName">Status Box</string>
@@ -2560,6 +2593,20 @@
 						<reference key="parent" ref="0"/>
 						<string key="objectName">Text View - No Visible Files</string>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">734</int>
+						<reference key="object" ref="482442000"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="591986858"/>
+						</array>
+						<reference key="parent" ref="36755285"/>
+						<string key="objectName">Static Text - Status Message</string>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">735</int>
+						<reference key="object" ref="591986858"/>
+						<reference key="parent" ref="482442000"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -2661,6 +2708,8 @@
 				<string key="707.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="73.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="732.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="734.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="735.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="8.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="9.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<dictionary class="NSMutableDictionary" key="93.IBAttributePlaceholdersKey"/>
@@ -2671,7 +2720,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">733</int>
+			<int key="maxID">736</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
